trying to fix radio button problem of not showing in firefox

--- a/css/style.css
+++ b/css/style.css
@@ -306,10 +306,15 @@ select{
 
 .box-5 {
    margin-top: 20px;
+   
 
     background-color: rgba(255,255,255, 0.7);
 
     padding-bottom: 20px;
+    display: flex;
+  
+  align-items: left;
+ 
 
 
   }
@@ -318,7 +323,7 @@ select{
 
     margin-left: -20px;
     padding-top: 20px;
-    position: relative;
+    
 
   }
 
@@ -328,14 +333,20 @@ select{
  
     
     display: flex;
-    align-items: center;
+    align-items: left;
     flex-direction: column;
     margin-left: 40px;
+    
 
 
   }
 
-  #check input {
+  #check label {
+position: relative;
+
+  }
+
+  input[type="checkbox"] {
     margin-top: 8px;
     margin-left: -20px;
     position: absolute;
@@ -344,7 +355,7 @@ select{
 
   }
 
-  #check label, #check input {
+  #check label, #check input[type="checkbox"]  {
 
     cursor: pointer;
   }
@@ -368,8 +379,9 @@ margin-left: 5px;
     
   padding-bottom: 20px;
   padding-top: 20px;
-  position: relative;
-
+ 
+    display: flex;
+    align-items: left;
 
 
   }
@@ -381,10 +393,12 @@ margin-left: 5px;
   }
 
 
+
+
   #radiocheck  {
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: left;
     flex-direction: column;
     margin-left: 40px;
   }
@@ -392,6 +406,8 @@ margin-left: 5px;
   #radiocheck input {
     margin-top: 8px;
     position: absolute;
+    display: flex;
+    align-items: left;
     margin-left: -20px;
   }
 
@@ -437,11 +453,14 @@ margin-left: 20px;
 #submit{
   background-color: rgba(255,255,255, 0.7);
   display: flex;
+  
   justify-content: center;
+
+  
   align-self: center;
   width: 100px;
-  padding-bottom: 10px;
-  padding-top:10px;
+
+  padding:10px;
 
   margin-top: 20px;
   font-family: 'Varela Round', sans-serif;
